Use latest implementation of JOSDK PR #3425